--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,11 +2,38 @@
 <%- include ("partials/header")%>
 
 <h1>Wright down your thoughts here</h1>
-<form>
-  <input name="name" type="text" class="blog-input" placeholder="Name" />
-  <textarea name="text" class="blog-input" placeholder="Your thoughts"></textarea>
+<form action="/" method="post">
+  <input name="userName" type="text" class="blog-input" placeholder="Name" />
+  <textarea name="userText" class="blog-input" placeholder="Your thoughts here"></textarea>
   <input type="submit" value="SUBMIT" />
 </form>
+
+
+
+<ul>
+  <% articles.forEach((article)=> { %>
+      <li>
+          <h2>
+              <%= article.userName %>
+          </h2>
+          <p>
+              <%= article.userText %>
+          </p>
+      </li>
+      <hr />
+  <% }) %>
+</ul>
+
+
+
+<%if (locals.message) {%>
+<article>
+  <h2><%=message.userName%><h2>
+  <p><%=message.userText%></p>
+</article>
+<%} else {%>
+  <h2>Nothing here yet</h2>
+<%}%>
   
 <!-- Footer ejs injection-->
 <%- include ("partials/footer")%>
